# subselect

./: DESCRIPTION  INDEX  MD5  NAMESPACE  R_PROFILE.R  configure  configure.ac
R/: anneal.R  ccr12.R  createHmat.R  eleaps.R  full.k.search.R  gcd.R  genetic.R  improve.R  leaps.R  reducematrix.svd  rm.R  rv.R  tau2.R  trimmatrix.R  validation.R  validmat.R  validnovcrit.R  xi2.R  zeta2.R  zzz.R
data/: farm.R  farm.rda
inst/: CHANGELOG  README
inst/doc/: subselect.R  subselect.Rnw
man/: anneal.Rd  ccr12.Rd  eleaps.Rd  full.k.search.Rd  gcd.Rd  genetic.Rd  glhHmat.Rd  glmHmat.Rd  improve.Rd  ldaHmat.Rd  leaps.Rd  lmHmat.Rd  rm.Rd  rv.Rd  subselect-internal.Rd  tau2.Rd  trimmatrix.Rd  wald.Rd  xi2.Rd  zeta2.Rd
src/: CCRcrt.cpp  CCRcrt.h  ErrMReals.h  GCDcrt.cpp  GCDcrt.h  Gstatma.cpp  ItIndices.h  MStcrt.cpp  MStcrt.h  Makevars.in  NewtonRp.cpp  NewtonRp.h  Qform.cpp  Qform.h  Qforms.cpp  Qforms.h  RMcrt.cpp  RMcrt.h  RVcrt.cpp  RVcrt.h  Rnk3CCRcrt.cpp  Rnk3CCRcrt.h  SRI_sscma.cpp  SRI_sscma.h  SR_datatrnsf.cpp  SR_intf.cpp  SR_sscma.h  SR_vsda.h  SR_vsmao.h  SpecialArrays.cpp  SpecialArrays.h  Sscma.cpp  Sscma.h  Subsets.cpp  Subsets.h  VQform.cpp  VQform.h  VSQforms.cpp  VSQforms.h  Varsmbo.cpp  (+37 more)
vignettes/: subbib.bib
